tests/golden/errors/overlapping_overloads.stderr
error[dispatch]: overlapping overloads of `same` are illegal
  --> overlapping_overloads.kso:6:4
   6 | fn same y
          ^
